# mdscraper

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  mdscraper.py  pyproject.toml  requirements.txt  scraper.py  utils.py
mdscraper/: __init__.py  cli.py
mdscraper/core/: __init__.py  scraper.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_empty_lines_fix.py  test_integration.py  test_mdscraper.py
